--- a/scss/_custom-forms.scss
+++ b/scss/_custom-forms.scss
@@ -13,8 +13,8 @@
   position: relative;
   display: inline-flex;
   min-height: (1rem * $line-height-base);
-  padding-left: $custom-control-gutter;
-  margin-right: $custom-control-spacer-x;
+  padding-#{$left}: $custom-control-gutter;
+  margin-#{$right}: $custom-control-spacer-x;
 }
 
 .custom-control-input {
@@ -57,7 +57,7 @@
 .custom-control-indicator {
   position: absolute;
   top: (($line-height-base - $custom-control-indicator-size) / 2);
-  left: 0;
+  #{$left}: 0;
   display: block;
   width: $custom-control-indicator-size;
   height: $custom-control-indicator-size;
@@ -118,7 +118,7 @@
     margin-bottom: $custom-control-spacer-y;
 
     + .custom-control {
-      margin-left: 0;
+      margin-#{$left}: 0;
     }
   }
 }
@@ -138,7 +138,7 @@
   line-height: $custom-select-line-height;
   color: $custom-select-color;
   vertical-align: middle;
-  background: $custom-select-bg $custom-select-indicator no-repeat right $custom-select-padding-x center;
+  background: $custom-select-bg $custom-select-indicator no-repeat #{$right} $custom-select-padding-x center;
   background-clip: padding-box;
   background-size: $custom-select-bg-size;
   border: $custom-select-border-width solid $custom-select-border-color;
@@ -211,8 +211,8 @@
 .custom-file-control {
   position: absolute;
   top: 0;
-  right: 0;
-  left: 0;
+  #{$right}: 0;
+  #{$left}: 0;
   z-index: 5;
   height: $custom-file-height;
   padding: $custom-file-padding-y $custom-file-padding-x;
@@ -236,7 +236,7 @@
   &::before {
     position: absolute;
     top: 0;
-    right: 0;
+    #{$right}: 0;
     z-index: 6;
     display: block;
     height: $custom-file-height;
@@ -244,7 +244,7 @@
     line-height: $custom-file-line-height;
     color: $custom-file-button-color;
     background-color: $custom-file-button-bg;
-    border-left: $custom-file-border-width solid $custom-file-border-color;
+    border-#{$left}: $custom-file-border-width solid $custom-file-border-color;
   }
 
   @each $lang, $text in map-get($custom-file-text, button-label) {
