--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -10,16 +10,16 @@
     display: inline-block;
     width: 0;
     height: 0;
-    margin-left: $caret-width * .85;
+    margin-#{$left}: $caret-width * .85;
     vertical-align: $caret-width * .85;
     content: "";
     border-top: $caret-width solid;
-    border-right: $caret-width solid transparent;
-    border-left: $caret-width solid transparent;
+    border-#{$right}: $caret-width solid transparent;
+    border-#{$left}: $caret-width solid transparent;
   }
 
   &:empty::after {
-    margin-left: 0;
+    margin-#{$left}: 0;
   }
 }
 
@@ -43,16 +43,16 @@
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  left: 0;
+  #{$left}: 0;
   z-index: $zindex-dropdown;
   display: none; // none by default, but block on "open" of the menu
-  float: left;
+  float: $left;
   min-width: $dropdown-min-width;
   padding: $dropdown-padding-y 0;
   margin: $dropdown-spacer 0 0; // override default ul
   font-size: $font-size-base; // Redeclare because nesting can cause inheritance issues
   color: $body-color;
-  text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
+  text-align: $left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   list-style: none;
   background-color: $dropdown-bg;
   background-clip: padding-box;
