--- a/scss/_input-group.scss
+++ b/scss/_input-group.scss
@@ -111,7 +111,7 @@
   @include border-right-radius(0);
 }
 .input-group-addon:not(:last-child) {
-  border-right: 0;
+  border-#{$right}: 0;
 }
 .input-group .form-control:not(:first-child),
 .input-group-addon:not(:first-child),
@@ -123,7 +123,7 @@
   @include border-left-radius(0);
 }
 .form-control + .input-group-addon:not(:first-child) {
-  border-left: 0;
+  border-#{$left}: 0;
 }
 
 //
@@ -145,7 +145,7 @@
     border: $input-btn-border-width solid $input-group-btn-border-color;
 
     + .btn {
-      margin-left: (-$input-btn-border-width);
+      margin-#{$left}: (-$input-btn-border-width);
     }
 
     // Bring the "active" button to the front
@@ -158,14 +158,14 @@
   &:not(:last-child) {
     > .btn,
     > .btn-group {
-      margin-right: (-$input-btn-border-width);
+      margin-#{$right}: (-$input-btn-border-width);
     }
   }
   &:not(:first-child) {
     > .btn,
     > .btn-group {
       z-index: 2;
-      margin-left: (-$input-btn-border-width);
+      margin-#{$left}: (-$input-btn-border-width);
       // Because specificity
       @include hover-focus-active {
         z-index: 3;
