--- a/scss/_tooltip.scss
+++ b/scss/_tooltip.scss
@@ -28,23 +28,23 @@
     }
 
     .arrow::before {
-      margin-left: -($tooltip-arrow-width - 2);
+      margin-#{$left}: -($tooltip-arrow-width - 2);
       content: "";
       border-width: $tooltip-arrow-width $tooltip-arrow-width 0;
       border-top-color: $tooltip-arrow-color;
     }
   }
-  &.bs-tooltip-right {
+  &.bs-tooltip-#{$right} {
     padding: 0 $tooltip-arrow-width;
     .arrow {
-      left: 0;
+      #{$left}: 0;
     }
 
     .arrow::before {
       margin-top: -($tooltip-arrow-width - 2);
       content: "";
       border-width: $tooltip-arrow-width $tooltip-arrow-width $tooltip-arrow-width 0;
-      border-right-color: $tooltip-arrow-color;
+      border-#{$right}-color: $tooltip-arrow-color;
     }
   }
   &.bs-tooltip-bottom {
@@ -54,38 +54,38 @@
     }
 
     .arrow::before {
-      margin-left: -($tooltip-arrow-width - 2);
+      margin-#{$left}: -($tooltip-arrow-width - 2);
       content: "";
       border-width: 0 $tooltip-arrow-width $tooltip-arrow-width;
       border-bottom-color: $tooltip-arrow-color;
     }
   }
-  &.bs-tooltip-left {
+  &.bs-tooltip-#{$left} {
     padding: 0 $tooltip-arrow-width;
     .arrow {
-      right: 0;
+      #{$right}: 0;
     }
 
     .arrow::before {
-      right: 0;
+      #{$right}: 0;
       margin-top: -($tooltip-arrow-width - 2);
       content: "";
       border-width: $tooltip-arrow-width 0 $tooltip-arrow-width $tooltip-arrow-width;
-      border-left-color: $tooltip-arrow-color;
+      border-#{$left}-color: $tooltip-arrow-color;
     }
   }
   &.bs-tooltip-auto {
     &[x-placement^="top"] {
       @extend .bs-tooltip-top;
     }
-    &[x-placement^="right"] {
-      @extend .bs-tooltip-right;
+    &[x-placement^="#{$right}"] {
+      @extend .bs-tooltip-#{$right};
     }
     &[x-placement^="bottom"] {
       @extend .bs-tooltip-bottom;
     }
-    &[x-placement^="left"] {
-      @extend .bs-tooltip-left;
+    &[x-placement^="#{$left}"] {
+      @extend .bs-tooltip-#{$left};
     }
   }
 
