--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -91,7 +91,7 @@ mark,
   display: inline-block;
 
   &:not(:last-child) {
-    margin-right: $list-inline-padding;
+    margin-#{$right}: $list-inline-padding;
   }
 }
 
