--- a/scss/_breadcrumb.scss
+++ b/scss/_breadcrumb.scss
@@ -8,13 +8,13 @@
 }
 
 .breadcrumb-item {
-  float: left;
+  float: $left;
 
   // The separator between breadcrumbs (by default, a forward-slash: "/")
   + .breadcrumb-item::before {
     display: inline-block; // Suppress underlining of the separator in modern browsers
-    padding-right: $breadcrumb-item-padding;
-    padding-left: $breadcrumb-item-padding;
+    padding-#{$right}: $breadcrumb-item-padding;
+    padding-#{$left}: $breadcrumb-item-padding;
     color: $breadcrumb-divider-color;
     content: "#{$breadcrumb-divider}";
   }
