--- a/scss/_button-group.scss
+++ b/scss/_button-group.scss
@@ -28,7 +28,7 @@
   .btn + .btn-group,
   .btn-group + .btn,
   .btn-group + .btn-group {
-    margin-left: -$input-btn-border-width;
+    margin-#{$left}: -$input-btn-border-width;
   }
 }
 
@@ -49,7 +49,7 @@
 
 // Set corners individual because sometimes a single button can be in a .btn-group and we need :first-child and :last-child to both match
 .btn-group > .btn:first-child {
-  margin-left: 0;
+  margin-#{$left}: 0;
 
   &:not(:last-child):not(.dropdown-toggle) {
     @include border-right-radius(0);
@@ -63,7 +63,7 @@
 
 // Custom edits for including btn-groups within btn-groups (useful for including dropdown buttons within a btn-group)
 .btn-group > .btn-group {
-  float: left;
+  float: $left;
 }
 
 .btn-group > .btn-group:not(:first-child):not(:last-child) > .btn {
@@ -95,22 +95,22 @@
 //
 
 .btn + .dropdown-toggle-split {
-  padding-right: $input-btn-padding-x * .75;
-  padding-left: $input-btn-padding-x * .75;
+  padding-#{$right}: $input-btn-padding-x * .75;
+  padding-#{$left}: $input-btn-padding-x * .75;
 
   &::after {
-    margin-left: 0;
+    margin-#{$left}: 0;
   }
 }
 
 .btn-sm + .dropdown-toggle-split {
-  padding-right: $input-btn-padding-x-sm * .75;
-  padding-left: $input-btn-padding-x-sm * .75;
+  padding-#{$right}: $input-btn-padding-x-sm * .75;
+  padding-#{$left}: $input-btn-padding-x-sm * .75;
 }
 
 .btn-lg + .dropdown-toggle-split {
-  padding-right: $input-btn-padding-x-lg * .75;
-  padding-left: $input-btn-padding-x-lg * .75;
+  padding-#{$right}: $input-btn-padding-x-lg * .75;
+  padding-#{$left}: $input-btn-padding-x-lg * .75;
 }
 
 
@@ -145,7 +145,7 @@
   > .btn-group + .btn,
   > .btn-group + .btn-group {
     margin-top: -$input-btn-border-width;
-    margin-left: 0;
+    margin-#{$left}: 0;
   }
 
   > .btn {
