--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -32,8 +32,8 @@
 }
 
 // CSS3 transforms when supported by the browser
-.carousel-item-next.carousel-item-left,
-.carousel-item-prev.carousel-item-right {
+.carousel-item-next.carousel-item-#{$left},
+.carousel-item-prev.carousel-item-#{$right} {
   transform: translateX(0);
 
   @supports (transform-style: preserve-3d) {
@@ -42,7 +42,7 @@
 }
 
 .carousel-item-next,
-.active.carousel-item-right {
+.active.carousel-item-#{$right} {
   transform: translateX(100%);
 
   @supports (transform-style: preserve-3d) {
@@ -51,7 +51,7 @@
 }
 
 .carousel-item-prev,
-.active.carousel-item-left {
+.active.carousel-item-#{$left} {
   transform: translateX(-100%);
 
   @supports (transform-style: preserve-3d) {
@@ -89,10 +89,10 @@
   }
 }
 .carousel-control-prev {
-  left: 0;
+  #{$left}: 0;
 }
 .carousel-control-next {
-  right: 0;
+  #{$right}: 0;
 }
 
 // Icons for within
@@ -119,16 +119,16 @@
 
 .carousel-indicators {
   position: absolute;
-  right: 0;
+  #{$right}: 0;
   bottom: 10px;
-  left: 0;
+  #{$left}: 0;
   z-index: 15;
   display: flex;
   justify-content: center;
-  padding-left: 0; // override <ol> default
+  padding-#{$left}: 0; // override <ol> default
   // Use the .carousel-control's width as margin so we don't overlay those
-  margin-right: $carousel-control-width;
-  margin-left: $carousel-control-width;
+  margin-#{$right}: $carousel-control-width;
+  margin-#{$left}: $carousel-control-width;
   list-style: none;
 
   li {
@@ -136,8 +136,8 @@
     flex: 0 1 auto;
     width: $carousel-indicator-width;
     height: $carousel-indicator-height;
-    margin-right: $carousel-indicator-spacer;
-    margin-left: $carousel-indicator-spacer;
+    margin-#{$right}: $carousel-indicator-spacer;
+    margin-#{$left}: $carousel-indicator-spacer;
     text-indent: -999px;
     background-color: rgba($carousel-indicator-active-bg, .5);
 
@@ -145,7 +145,7 @@
     &::before {
       position: absolute;
       top: -10px;
-      left: 0;
+      #{$left}: 0;
       display: inline-block;
       width: 100%;
       height: 10px;
@@ -154,7 +154,7 @@
     &::after {
       position: absolute;
       bottom: -10px;
-      left: 0;
+      #{$left}: 0;
       display: inline-block;
       width: 100%;
       height: 10px;
@@ -174,9 +174,9 @@
 
 .carousel-caption {
   position: absolute;
-  right: ((100% - $carousel-caption-width) / 2);
+  #{$right}: ((100% - $carousel-caption-width) / 2);
   bottom: 20px;
-  left: ((100% - $carousel-caption-width) / 2);
+  #{$left}: ((100% - $carousel-caption-width) / 2);
   z-index: 10;
   padding-top: 20px;
   padding-bottom: 20px;
