--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -13,9 +13,9 @@
 .modal {
   position: fixed;
   top: 0;
-  right: 0;
+  #{$right}: 0;
   bottom: 0;
-  left: 0;
+  #{$left}: 0;
   z-index: $zindex-modal;
   display: none;
   overflow: hidden;
@@ -67,9 +67,9 @@
 .modal-backdrop {
   position: fixed;
   top: 0;
-  right: 0;
+  #{$right}: 0;
   bottom: 0;
-  left: 0;
+  #{$left}: 0;
   z-index: $zindex-modal-backdrop;
   background-color: $modal-backdrop-bg;
 
@@ -88,7 +88,7 @@
   border-bottom: $modal-header-border-width solid $modal-header-border-color;
 
   .close {
-    margin-left: auto; // Force icon to the right even when there's no .modal-title
+    margin-#{$left}: auto; // Force icon to the right even when there's no .modal-title
   }
 }
 
@@ -117,8 +117,8 @@
   border-top: $modal-footer-border-width solid $modal-footer-border-color;
 
   // Easily place margin between footer elements
-  > :not(:first-child) { margin-left: .25rem; }
-  > :not(:last-child) { margin-right: .25rem; }
+  > :not(:first-child) { margin-#{$left}: .25rem; }
+  > :not(:last-child) { margin-#{$right}: .25rem; }
 }
 
 // Measure scrollbar width for padding body during modal show/hide
