--- a/scss/mixins/_float.scss
+++ b/scss/mixins/_float.scss
@@ -1,8 +1,8 @@
 @mixin float-left {
-  float: left !important;
+  float: $left !important;
 }
 @mixin float-right {
-  float: right !important;
+  float: $right !important;
 }
 @mixin float-none {
   float: none !important;
