--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -4,10 +4,10 @@
 
 @mixin make-container() {
   width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: ($grid-gutter-width / 2);
-  padding-left:  ($grid-gutter-width / 2);
+  margin-#{$right}: auto;
+  margin-#{$left}: auto;
+  padding-#{$right}: ($grid-gutter-width / 2);
+  padding-#{$left}:  ($grid-gutter-width / 2);
 }
 
 
@@ -23,8 +23,8 @@
 @mixin make-row() {
   display: flex;
   flex-wrap: wrap;
-  margin-right: ($grid-gutter-width / -2);
-  margin-left:  ($grid-gutter-width / -2);
+  margin-#{$right}: ($grid-gutter-width / -2);
+  margin-#{$left}:  ($grid-gutter-width / -2);
 }
 
 @mixin make-col-ready() {
@@ -34,8 +34,8 @@
   // later on to override this initial width.
   width: 100%;
   min-height: 1px; // Prevent collapsing
-  padding-right: ($grid-gutter-width / 2);
-  padding-left:  ($grid-gutter-width / 2);
+  padding-#{$right}: ($grid-gutter-width / 2);
+  padding-#{$left}:  ($grid-gutter-width / 2);
 }
 
 @mixin make-col($size, $columns: $grid-columns) {
@@ -47,5 +47,5 @@
 }
 
 @mixin make-col-offset($size, $columns: $grid-columns) {
-  margin-left: percentage($size / $columns);
+  margin-#{$left}: percentage($size / $columns);
 }
