--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -14,7 +14,7 @@
         }
         .#{$abbrev}r#{$infix}-#{$size},
         .#{$abbrev}x#{$infix}-#{$size} {
-          #{$prop}-right: $length !important;
+          #{$prop}-#{$right}: $length !important;
         }
         .#{$abbrev}b#{$infix}-#{$size},
         .#{$abbrev}y#{$infix}-#{$size} {
@@ -22,7 +22,7 @@
         }
         .#{$abbrev}l#{$infix}-#{$size},
         .#{$abbrev}x#{$infix}-#{$size} {
-          #{$prop}-left: $length !important;
+          #{$prop}-#{$left}: $length !important;
         }
       }
     }
@@ -35,7 +35,7 @@
     }
     .mr#{$infix}-auto,
     .mx#{$infix}-auto {
-      margin-right: auto !important;
+      margin-#{$right}: auto !important;
     }
     .mb#{$infix}-auto,
     .my#{$infix}-auto {
@@ -43,7 +43,7 @@
     }
     .ml#{$infix}-auto,
     .mx#{$infix}-auto {
-      margin-left: auto !important;
+      margin-#{$left}: auto !important;
     }
   }
 }
