--- a/scss/_code.scss
+++ b/scss/_code.scss
@@ -9,7 +9,7 @@ samp {
 // Inline code
 code {
   padding: $code-padding-y $code-padding-x;
-  font-size: $code-font-size;
+  @include rfs($code-font-size);
   color: $code-color;
   background-color: $code-bg;
   @include border-radius($border-radius);
@@ -25,7 +25,7 @@ code {
 // User input typically entered via keyboard
 kbd {
   padding: $code-padding-y $code-padding-x;
-  font-size: $code-font-size;
+  @include rfs($code-font-size);
   color: $kbd-color;
   background-color: $kbd-bg;
   @include border-radius($border-radius-sm);
@@ -44,7 +44,7 @@ pre {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
-  font-size: $code-font-size;
+  @include rfs($code-font-size);
   color: $pre-color;
 
   // Account for some code outputs that place code tags in pre tags
