--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -50,7 +50,7 @@
   min-width: $dropdown-min-width;
   padding: $dropdown-padding-y 0;
   margin: $dropdown-spacer 0 0; // override default ul
-  font-size: $font-size-base; // Redeclare because nesting can cause inheritance issues
+  @include rfs($font-size-base); // Redeclare because nesting can cause inheritance issues
   color: $body-color;
   text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   list-style: none;
@@ -122,7 +122,7 @@
   display: block;
   padding: $dropdown-padding-y $dropdown-item-padding-x;
   margin-bottom: 0; // for use with heading elements
-  font-size: $font-size-sm;
+  @include rfs($font-size-sm);
   color: $dropdown-header-color;
   white-space: nowrap; // as with > li > a
 }
