--- a/assets/scss/_masthead.scss
+++ b/assets/scss/_masthead.scss
@@ -6,13 +6,14 @@
   // background-image: linear-gradient(45deg, #fafafa, #f5f5f5);
 
   h1 {
+    @include rfs(64);
     line-height: 1;
   }
 
   .btn {
     width: 100%;
-    padding: .8rem 2rem;
-    font-size: 1.25rem;
+    padding: .8em 2em;
+    @include rfs(20);
     font-weight: 500;
   }
 
@@ -31,10 +32,6 @@
   }
 
   @include media-breakpoint-up(md) {
-    h1 {
-      font-size: 4rem;
-    }
-
     .carbonad {
       margin-top: 3rem !important;
     }
