--- a/docs/4.0/examples/narrow-jumbotron/narrow-jumbotron.css
+++ b/docs/4.0/examples/narrow-jumbotron/narrow-jumbotron.css
@@ -47,8 +47,7 @@ body {
   border-bottom: .05rem solid #e5e5e5;
 }
 .jumbotron .btn {
-  padding: .75rem 1.5rem;
-  font-size: 1.5rem;
+  padding: .75em 1.5em;
 }
 
 /* Supporting marketing content */
