--- a/scss/_input-group.scss
+++ b/scss/_input-group.scss
@@ -64,7 +64,7 @@
 .input-group-addon {
   padding: $input-btn-padding-y $input-btn-padding-x;
   margin-bottom: 0; // Allow use of <label> elements by overriding our default margin-bottom
-  font-size: $font-size-base; // Match inputs
+  @include rfs($font-size-base); // Match inputs
   font-weight: $font-weight-normal;
   line-height: $input-btn-line-height;
   color: $input-group-addon-color;
@@ -77,13 +77,13 @@
   // Sizing
   &.form-control-sm {
     padding: $input-btn-padding-y-sm $input-btn-padding-x-sm;
-    font-size: $font-size-sm;
+    @include rfs($font-size-sm);
     @include border-radius($input-border-radius-sm);
   }
 
   &.form-control-lg {
     padding: $input-btn-padding-y-lg $input-btn-padding-x-lg;
-    font-size: $font-size-lg;
+    @include rfs($font-size-lg);
     @include border-radius($input-border-radius-lg);
   }
 
