--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -44,7 +44,7 @@
   padding-top: $navbar-brand-padding-y;
   padding-bottom: $navbar-brand-padding-y;
   margin-right: $navbar-padding-x;
-  font-size: $navbar-brand-font-size;
+  @include rfs($navbar-brand-font-size);
   line-height: inherit;
   white-space: nowrap;
 
@@ -106,7 +106,7 @@
 // Button for toggling the navbar when in its collapsed state
 .navbar-toggler {
   padding: $navbar-toggler-padding-y $navbar-toggler-padding-x;
-  font-size: $navbar-toggler-font-size;
+  @include rfs($navbar-toggler-font-size);
   line-height: 1;
   background: transparent; // remove default button style
   border: $border-width solid transparent; // remove default button style
