--- a/scss/_progress.scss
+++ b/scss/_progress.scss
@@ -7,7 +7,7 @@
   display: flex;
   height: $progress-height;
   overflow: hidden; // force rounded corners by cropping it
-  font-size: $progress-font-size;
+  @include rfs($progress-font-size);
   background-color: $progress-bg;
   @include border-radius($progress-border-radius);
 }
