--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -11,36 +11,36 @@ h1, h2, h3, h4, h5, h6,
   color: $headings-color;
 }
 
-h1, .h1 { font-size: $h1-font-size; }
-h2, .h2 { font-size: $h2-font-size; }
-h3, .h3 { font-size: $h3-font-size; }
-h4, .h4 { font-size: $h4-font-size; }
-h5, .h5 { font-size: $h5-font-size; }
-h6, .h6 { font-size: $h6-font-size; }
+h1, .h1 { @include rfs($h1-font-size); }
+h2, .h2 { @include rfs($h2-font-size); }
+h3, .h3 { @include rfs($h3-font-size); }
+h4, .h4 { @include rfs($h4-font-size); }
+h5, .h5 { @include rfs($h5-font-size); }
+h6, .h6 { @include rfs($h6-font-size); }
 
 .lead {
-  font-size: $lead-font-size;
+  @include rfs($lead-font-size);
   font-weight: $lead-font-weight;
 }
 
 // Type display classes
 .display-1 {
-  font-size: $display1-size;
+  @include rfs($display1-size);
   font-weight: $display1-weight;
   line-height: $display-line-height;
 }
 .display-2 {
-  font-size: $display2-size;
+  @include rfs($display2-size);
   font-weight: $display2-weight;
   line-height: $display-line-height;
 }
 .display-3 {
-  font-size: $display3-size;
+  @include rfs($display3-size);
   font-weight: $display3-weight;
   line-height: $display-line-height;
 }
 .display-4 {
-  font-size: $display4-size;
+  @include rfs($display4-size);
   font-weight: $display4-weight;
   line-height: $display-line-height;
 }
@@ -64,7 +64,7 @@ hr {
 
 small,
 .small {
-  font-size: $small-font-size;
+  @include rfs($small-font-size);
   font-weight: $font-weight-normal;
 }
 
@@ -109,7 +109,7 @@ mark,
 // Blockquotes
 .blockquote {
   margin-bottom: $spacer;
-  font-size: $blockquote-font-size;
+  @include rfs($blockquote-font-size);
 }
 
 .blockquote-footer {
