--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -620,28 +620,33 @@ $tooltip-arrow-color:         $tooltip-bg !default;
 
 // Popovers
 
-$popover-inner-padding:               1px !default;
+$popover-inner-padding:               0.0625rem !default;
 $popover-bg:                          $white !default;
 $popover-max-width:                   276px !default;
-$popover-border-width:                $border-width !default;
+$popover-border-width:                12px; //$border-width !default;
 $popover-border-color:                rgba($black,.2) !default;
-$popover-box-shadow:                  0 5px 10px rgba($black,.2) !default;
+$popover-box-shadow:                  0 0.3125rem 0.625rem rgba($black,.2) !default;
 
 $popover-header-bg:                    darken($popover-bg, 3%) !default;
 $popover-header-color:                 $headings-color !default;
-$popover-header-padding-y:             8px !default;
-$popover-header-padding-x:             14px !default;
+$popover-header-padding-y:             0.5rem !default;
+$popover-header-padding-x:             0.875rem !default;
 
 $popover-body-color:               $body-color !default;
-$popover-body-padding-y:           9px !default;
-$popover-body-padding-x:           14px !default;
+$popover-body-padding-y:           0.5625rem !default;
+$popover-body-padding-x:           0.875rem !default;
 
-$popover-arrow-width:                 10px !default;
-$popover-arrow-height:                5px !default;
-$popover-arrow-color:                 $popover-bg !default;
+$popover-arrow-width:                 .8rem !default; // 10px !default;
+$popover-arrow-height:                .4rem !default; //5px !default;
+$popover-arrow-color: blue;//                $popover-bg !default;
 
-$popover-arrow-outer-width:           ($popover-arrow-width + 1px) !default;
-$popover-arrow-outer-color:           fade-in($popover-border-color, .05) !default;
+//ORIGINAL $popover-arrow-outer-width:           ($popover-arrow-width + 1px) !default;
+//NEW 
+//$popover-arrow-outer-width: calc(#{$popover-arrow-width} + 1.41*#{$popover-border-width}) !default; //NEW
+//$popover-arrow-outer-width: calc(#{$popover-arrow-width} + #{$popover-border-width}) !default; //NEW
+
+
+$popover-arrow-outer-color: green;//           fade-in($popover-border-color, .05) !default;
 
 
 // Badges
