Fix bug in placing popover and its arrow Allows for arrow-width in rem

--- a/scss/_popover.scss
+++ b/scss/_popover.scss
@@ -25,14 +25,13 @@
   .arrow {
     position: absolute;
     display: block;
-    width: $popover-arrow-width;
-    height: $popover-arrow-height; background-color: red;
+    width: calc(2*#{$popover-border-width} + #{$popover-arrow-width}); 
+    height: calc(2*#{$popover-border-width} + #{$popover-arrow-height}); 
   }
 
-$popover-arrow-margin: /*$popover-arrow-width +*/ 0.5*$popover-arrow-width; 
-
-$popover-arrow-inner-width: calc(#{$popover-arrow-width} - #{$popover-border-width});
-$minus-popover-arrow-inner-width: calc(-#{$popover-arrow-width} + #{$popover-border-width});
+  $popover-arrow-margin: 0.5*$popover-arrow-width; 
+  $popover-arrow-before-coor: calc(-#{$popover-arrow-width} - #{$popover-border-width});
+  $popover-arrow-after-coor : -$popover-arrow-width;
 
   .arrow::before,
   .arrow::after {
@@ -44,17 +43,17 @@ $minus-popover-arrow-inner-width: calc(-#{$popover-arrow-width} + #{$popover-bor
 
   .arrow::before {
     content: "";
-    border-width: $popover-arrow-width; //$popover-arrow-outer-width;
+    border-width: $popover-arrow-width; 
   }
   .arrow::after {
     content: "";
-    border-width: $popover-arrow-width; //$popover-arrow-outer-width; TODO skal være smallere
+    border-width: $popover-arrow-width; 
   }
 
   // Popover directions
 
   &.bs-popover-top {
-    margin-bottom: $popover-arrow-width; //$popover-arrow-outer-width - $popover-border-width; //$popover-arrow-width;
+    margin-bottom: $popover-arrow-width; 
 
     .arrow {
       bottom: 0;
@@ -63,30 +62,19 @@ $minus-popover-arrow-inner-width: calc(-#{$popover-arrow-width} + #{$popover-bor
     .arrow::before,
     .arrow::after {
       border-bottom-width: 0;
+      margin-left: -$popover-arrow-margin;
     }
 
     .arrow::before {
-      bottom: -$popover-arrow-width; //-$popover-arrow-outer-width;
-      margin-left: -$popover-arrow-margin; //-$popover-arrow-width; //-$popover-arrow-outer-width; //-($popover-arrow-outer-width - 5);
+      bottom: $popover-arrow-before-coor; 
       border-top-color: $popover-arrow-outer-color;
     }
 
     .arrow::after {
-      bottom: $minus-popover-arrow-inner-width; //$popover-arrow-width; //-($popover-arrow-outer-width - 1);
-      margin-left: -$popover-arrow-margin; //-$popover-arrow-width; //-($popover-arrow-outer-width - 5);
+      bottom: $popover-arrow-after-coor; 
       border-top-color: $popover-arrow-color;
     }
   }
-
-
-
-
-
-
-
-
-
-
 
   &.bs-popover-right {
     margin-left: $popover-arrow-width;
@@ -97,17 +85,17 @@ $minus-popover-arrow-inner-width: calc(-#{$popover-arrow-width} + #{$popover-bor
 
     .arrow::before,
     .arrow::after {
-      margin-top: 0;//-($popover-arrow-outer-width - 3);
+      margin-top: -$popover-arrow-margin;
       border-left-width: 0;
     }
 
     .arrow::before {
-      left: 0;//-$popover-arrow-outer-width;
+      left: $popover-arrow-before-coor;
       border-right-color: $popover-arrow-outer-color;
     }
 
     .arrow::after {
-      left: 0;//-($popover-arrow-outer-width - 1);
+      left: $popover-arrow-after-coor;
       border-right-color: $popover-arrow-color;
     }
   }
@@ -121,32 +109,20 @@ $minus-popover-arrow-inner-width: calc(-#{$popover-arrow-width} + #{$popover-bor
 
     .arrow::before,
     .arrow::after {
-//      margin-left: -($popover-arrow-width - 3);
+      margin-left: -$popover-arrow-margin; 
       border-top-width: 0;
     }
 
     .arrow::before {
-      top: -$popover-arrow-width; //-$popover-arrow-outer-width;
-      margin-left: -$popover-arrow-margin; //-$popover-arrow-width; //-$popover-arrow-outer-width; //-($popover-arrow-outer-width - 5);
+      top: $popover-arrow-before-coor;
       border-bottom-color: $popover-arrow-outer-color;
     }
 
     .arrow::after {
-      top: $minus-popover-arrow-inner-width; //$popover-arrow-width; //-($popover-arrow-outer-width - 1);
-      margin-left: -$popover-arrow-margin; //-$popover-arrow-width; //-($popover-arrow-outer-width - 5);
+      top: $popover-arrow-after-coor; 
       border-bottom-color: $popover-arrow-color;
-    }
-/*
-    .arrow::before {
-      top: 0;//-$popover-arrow-outer-width;
-      border-bottom-color: $popover-arrow-outer-color;
     }
 
-    .arrow::after {
-      top: 0;//-($popover-arrow-outer-width - 1);
-      border-bottom-color: $popover-arrow-color;
-    }
-*/
     // This will remove the popover-header's border just below the arrow
     .popover-header::before {
       position: absolute;
@@ -169,17 +145,17 @@ $minus-popover-arrow-inner-width: calc(-#{$popover-arrow-width} + #{$popover-bor
 
     .arrow::before,
     .arrow::after {
-      margin-top: 0;//-($popover-arrow-outer-width - 3);
+      margin-top: -$popover-arrow-margin;
       border-right-width: 0;
     }
 
     .arrow::before {
-      right: 0; //-$popover-arrow-outer-width;
+      right: $popover-arrow-before-coor;
       border-left-color: $popover-arrow-outer-color;
     }
 
     .arrow::after {
-      right: 0;//-($popover-arrow-outer-width - 1);
+      right: $popover-arrow-after-coor;
       border-left-color: $popover-arrow-color;
     }
   }
