--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -608,13 +608,13 @@ $tooltip-max-width:           200px !default;
 $tooltip-color:               $white !default;
 $tooltip-bg:                  $black !default;
 $tooltip-opacity:             .9 !default;
-$tooltip-padding-y:           3px !default;
-$tooltip-padding-x:           8px !default;
+$tooltip-padding-y:           0.1875rem !default;
+$tooltip-padding-x:           0.5rem !default;
 $tooltip-margin:              0 !default;
 
 
-$tooltip-arrow-width:         5px !default;
-$tooltip-arrow-height:        5px !default;
+$tooltip-arrow-width:         0.3125rem !default;
+$tooltip-arrow-height:        0.3125rem !default;
 $tooltip-arrow-color:         $tooltip-bg !default;
 
 
