Fix for transparent links on mobile navbar

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -306,7 +306,7 @@
     }
 
     > li > a {
-      color: @nav-link-color;
+      color: @nav-link-color !important;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
