--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -157,7 +157,7 @@
             position: absolute;
           }
 
-          .dropdown-menu-#{$right} {
+          .dropdown-menu-right {
             #{$right}: 0;
             #{$left}: auto; // Reset the default from `.dropdown-menu`
           }
