Use border-radius mixin for buttons
I thought it was weird that the `border-radius` mixin wasn’t being used in some places so I went through and updated code where it seemed that mixin should be used.

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -208,11 +208,11 @@
         }
 
         &:not(:first-child):not(:last-child) {
-          border-radius: 0;
+          @include border-radius(0);
 
           .card-img-top,
           .card-img-bottom {
-            border-radius: 0;
+            @include border-radius(0);
           }
         }
       }
