--- a/scss/_button-group.scss
+++ b/scss/_button-group.scss
@@ -44,7 +44,7 @@
 }
 
 .btn-group > .btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
-  border-radius: 0;
+  @include border-radius(0);
 }
 
 // Set corners individual because sometimes a single button can be in a .btn-group and we need :first-child and :last-child to both match
@@ -67,7 +67,7 @@
 }
 
 .btn-group > .btn-group:not(:first-child):not(:last-child) > .btn {
-  border-radius: 0;
+  @include border-radius(0);
 }
 
 .btn-group > .btn-group:first-child:not(:last-child) {
@@ -150,7 +150,7 @@
 
   > .btn {
     &:not(:first-child):not(:last-child) {
-      border-radius: 0;
+      @include border-radius(0);
     }
   }
 
@@ -163,7 +163,7 @@
   }
 
   > .btn-group:not(:first-child):not(:last-child) > .btn {
-    border-radius: 0;
+    @include border-radius(0);
   }
 
   > .btn-group:first-child:not(:last-child) {
