--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -76,7 +76,7 @@ fieldset[disabled] a.btn {
   font-weight: $font-weight-normal;
   color: $link-color;
   background-color: transparent;
-  border-radius: 0;
+  @include border-radius(0);
 
   @include hover {
     color: $link-hover-color;
