(Fixes #23449) Custom Checkbox and Radio markup should follow similar pattern to Form Check

--- a/scss/_custom-forms.scss
+++ b/scss/_custom-forms.scss
@@ -11,10 +11,13 @@
 
 .custom-control {
   position: relative;
-  display: inline-flex;
-  min-height: (1rem * $line-height-base);
-  padding-left: $custom-control-gutter;
-  margin-right: $custom-control-spacer-x;
+  margin-bottom: $custom-control-spacer-y;
+
+  label {
+    display: inline;
+    padding-left: $custom-control-gutter;
+    margin-bottom: 0;
+  }
 }
 
 .custom-control-input {
@@ -107,19 +110,14 @@
 
 // Layout options
 //
-// By default radios and checkboxes are `inline-block` with no additional spacing
-// set. Use these optional classes to tweak the layout.
+// By default radios and checkboxes are stacked, add `.custom-control-inline`
+// to each `.custom-control` to display it inline.
 
-.custom-controls-stacked {
-  display: flex;
-  flex-direction: column;
+.custom-control-inline {
+  display: inline-block;
 
-  .custom-control {
-    margin-bottom: $custom-control-spacer-y;
-
-    + .custom-control {
-      margin-left: 0;
-    }
+  + .custom-control-inline {
+    margin-left: $custom-control-spacer-x;
   }
 }
 
