Fix No Rounded Corners on Card Group.

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -185,6 +185,11 @@
 
       // Handle rounded corners
       @if $enable-rounded {
+
+        &:only-child {
+          @include border-radius($card-border-radius !important);
+        }
+
         &:first-child {
           @include border-right-radius(0);
 
