--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -4,7 +4,8 @@
  * Copyright 2011-2017 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i');
+@import "custom";
 @import "functions";
 @import "variables";
 @import "mixins";
@@ -39,3 +40,5 @@
 @import "popover";
 @import "carousel";
 @import "utilities";
+
+
